Tweaks based on production bugs - slight adjustment to bg code to try to stop flickering. More button adjustments

--- a/style-sections.css
+++ b/style-sections.css
@@ -16,13 +16,14 @@
 }
 
 .about__container {
-	background: var(--background-image); 
+	background: var(--background-image);
 	background-size: cover;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	padding-bottom: 1.5rem;
 	padding-top: 1.5rem;
+	position: static;
 }
 
 .contact {
@@ -157,10 +158,10 @@
 	cursor: pointer;
 	font-family: var(--theme-font-family);
 	font-size: 1.1rem;
+	height: 2.5rem;
 	margin: .3rem 1rem;
-	max-height: 3.5rem;
 	max-width: 12rem;
-	min-width: 7rem; 
+	min-width: 7.5rem; 
 }
 
 .web-app__link-button:hover {
